Build MetalMan_2025-12-23T23-14-14.txt

Showing Recent Errors Only

Build target MetalMan of project MetalMan with configuration Debug

SwiftCompile normal arm64 Compiling\ MetalGameView.swift /Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift (in target 'MetalMan' from project 'MetalMan')

Failed frontend command:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -c /Users/maxdavis/Projects/MetalMan/MetalMan/Renderer.swift /Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameContainer.swift /Users/maxdavis/Projects/MetalMan/MetalMan/ContentView.swift -primary-file /Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift /Users/maxdavis/Projects/MetalMan/MetalMan/MetalManApp.swift /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/DerivedSources/GeneratedAssetSymbols.swift -emit-dependencies-path /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalGameView.d -emit-const-values-path /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalGameView.swiftconstvalues -emit-reference-dependencies-path /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalGameView.swiftdeps -serialize-diagnostics-path /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalGameView.dia -emit-localized-strings -emit-localized-strings-path /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64 -target arm64-apple-macos26.2 -module-can-import-version AppKit 2685.30.107 2685.30.107 -module-can-import-version DeveloperToolsSupport 23.0.4 23.0.4 -module-can-import-version SwiftUI 7.2.5.1 7.2.5 -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libFoundationMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#FoundationMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libObservationMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#ObservationMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libPreviewsMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#PreviewsMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libSwiftMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#SwiftMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libSwiftUIMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#SwiftUIMacros -disable-implicit-swift-modules -Xcc -fno-implicit-modules -Xcc -fno-implicit-module-maps -explicit-swift-module-map-file /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalMan-dependencies-23.json -Xllvm -aarch64-use-tbi -enable-objc-interop -stack-check -sdk /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk -I /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Products/Debug -F /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Products/Debug -no-color-diagnostics -Xcc -fno-color-diagnostics -enable-testing -g -debug-info-format\=dwarf -dwarf-version\=5 -module-cache-path /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/SwiftExplicitPrecompiledModules -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -serialize-debugging-options -const-gather-protocols-file /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalMan_const_extract_protocols.json -enable-upcoming-feature DisableOutwardActorInference -enable-upcoming-feature InferSendableFromCaptures -enable-upcoming-feature GlobalActorIsolatedTypesUsability -enable-upcoming-feature MemberImportVisibility -enable-upcoming-feature InferIsolatedConformances -enable-upcoming-feature NonisolatedNonsendingByDefault -enable-experimental-feature DebugDescriptionMacro -enable-bare-slash-regex -default-isolation\=MainActor -empty-abi-descriptor -validate-clang-modules-once -clang-build-session-file /Users/maxdavis/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -working-directory -Xcc /Users/maxdavis/Projects/MetalMan -enable-anonymous-context-mangled-names -file-compilation-dir /Users/maxdavis/Projects/MetalMan -Xcc -D_LIBCPP_HARDENING_MODE\=_LIBCPP_HARDENING_MODE_DEBUG -Xcc -ivfsstatcache -Xcc /Users/maxdavis/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx26.2-25C57-3885c01c3e6b6a337905948deab2002e00fa09913b459cbbc988d1f6730289ae.sdkstatcache -Xcc -I/Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/MetalMan-generated-files.hmap -Xcc -I/Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/MetalMan-own-target-headers.hmap -Xcc -I/Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/MetalMan-all-target-headers.hmap -Xcc -iquote -Xcc /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/MetalMan-project-headers.hmap -Xcc -I/Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Products/Debug/include -Xcc -I/Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/DerivedSources-normal/arm64 -Xcc -I/Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/DerivedSources/arm64 -Xcc -I/Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/DerivedSources -Xcc -DDEBUG\=1 -no-auto-bridging-header-chaining -module-name MetalMan -frontend-parseable-output -disable-clang-spi -target-sdk-version 26.2 -target-sdk-name macosx26.2 -clang-target arm64-apple-macos26.2 -in-process-plugin-server-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/libSwiftInProcPluginServer.dylib -o /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Build/Intermediates.noindex/MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalGameView.o -index-unit-output-path /MetalMan.build/Debug/MetalMan.build/Objects-normal/arm64/MetalGameView.o -index-store-path /Users/maxdavis/Library/Developer/Xcode/DerivedData/MetalMan-eaadnlxmikppjmfqsryuufhudppc/Index.noindex/DataStore -index-system-modules

SwiftCompile normal arm64 /Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift (in target 'MetalMan' from project 'MetalMan')
    cd /Users/maxdavis/Projects/MetalMan
    

/Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift:199:27: error: immutable value 'self.renderer' may only be initialized once
            self.renderer = renderer
                          ^
/Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift:179:9: note: change 'let' to 'var' to make it mutable
        let renderer: Renderer
        ^~~
        var
/Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift:195:19: error: property 'self.renderer' not initialized at super.init call
            super.init()
                  ^

/Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift:199:27: Immutable value 'self.renderer' may only be initialized once

/Users/maxdavis/Projects/MetalMan/MetalMan/MetalGameView.swift:195:19: Property 'self.renderer' not initialized at super.init call



Build failed    12/23/25, 11:14 PM    1.1 seconds
